--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"description": "For fetching data from SVT's recept API",
 	"main": "lib/index.js",
+	"types": "typings/index.d.ts",
 	"scripts": {
 		"prepublish": "tsc"
 	},
